--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "asm": true,
     "autosave": true,
     "av": 1,
-    "background": false,
+    "background": true,
     "colors": true,
     "cpu-affinity": null,
     "cpu-priority": 5,
